--- a/rpm/harbour-smpc.yaml
+++ b/rpm/harbour-smpc.yaml
@@ -6,26 +6,27 @@ Release: 1
 Group: Qt/Qt
 License: GPLv3
 Sources:
-- '%{name}-%{version}.tar.bz2'
+    - '%{name}-%{version}.tar.bz2'
 Description: |
   This is a port the symbian based mpd-client qmobilempd to SailfishOS
 Configure: none
 Builder: qtc5
 PkgConfigBR:
-- Qt5Quick
-- sailfishapp >= 0.0.10
-- Qt5Qml
-- Qt5Core
+    - Qt5Quick
+    - sailfishapp >= 0.0.10
+    - Qt5Qml
+    - Qt5Core
 Requires:
-- qt5-qtdeclarative-import-xmllistmodel
-- sailfishsilica-qt5
+    - qt5-qtdeclarative-import-xmllistmodel
+    - sailfishsilica-qt5
 Files:
-- '%{_bindir}'
-- '%{_datadir}/harbour-smpc'
-- '%{_datadir}/applications'
-- '%{_datadir}/icons/hicolor/86x86/apps'
-- '%{_datadir}/icons/hicolor/108x108/apps'
-- '%{_datadir}/icons/hicolor/128x128/apps'
-- '%{_datadir}/icons/hicolor/256x256/apps'
-#- '%{_datadir}/icons/hicolor/scalable/apps'
+    - '%{_bindir}'
+    - '%{_datadir}/%{name}'
+    - '%{_datadir}/%{name}/common/qml/*'
+    - '%{_datadir}/applications/%{name}.desktop'
+    - '%{_datadir}/icons/hicolor/*/apps/%{name}.png'
+    #- '%{_datadir}/icons/hicolor/108x108/apps'
+    #- '%{_datadir}/icons/hicolor/128x128/apps'
+    #- '%{_datadir}/icons/hicolor/256x256/apps'
+    #- '%{_datadir}/icons/hicolor/scalable/apps'
 PkgBR: []
