--- a/rpm/harbour-smpc.yaml
+++ b/rpm/harbour-smpc.yaml
@@ -1,7 +1,7 @@
 Name: harbour-smpc
 Summary: SailfishOS Port of qmobilempd client
 URL: https://github.com/djselbeck/smpc
-Version: 1.3.3.2
+Version: 1.3.99
 Release: 1
 Group: Qt/Qt
 License: GPLv3
@@ -19,6 +19,8 @@ PkgConfigBR:
 Requires:
 - qt5-qtdeclarative-import-xmllistmodel
 - sailfishsilica-qt5
+- qt5-qtmultimedia
+- qt5-qtsvg
 Files:
 - '%{_bindir}'
 - '%{_datadir}/harbour-smpc'
